--- a/css/agency.css
+++ b/css/agency.css
@@ -49,9 +49,9 @@ section h2.section-heading {
 }
 
 section h3.section-subheading {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 400;
-  font-style: italic;
+  font-style: normal;
   margin-bottom: 75px;
   text-transform: none;
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -225,7 +225,7 @@ header.masthead .intro-text{
     font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   header.masthead .intro-text{
-	padding-top: 300px;
+	padding-top: 400px;
     padding-bottom: 100px;
 	font-size: 75px;
     font-weight: 700;
@@ -238,6 +238,7 @@ header.masthead .intro-text{
 .service-heading {
   margin: 15px 0;
   text-transform: none;
+  color: white;
 }
 
 #portfolio .portfolio-item {
